backend/ingress/meeton-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meeton-ingress
  namespace: meeton-backend
  labels:
    app: meeton-backend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:3000,https://localhost:3000,http://172.16.212.76:3000,http://front.oguogu.store:3000,http://front.172.16.212.76.end:3000"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT,GET,POST,DELETE,OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "*"
    nginx.ingress.kubernetes.io/cors-expose-headers: "*"
spec:
  rules:
    - host: www.bbang.site
      http:
        paths:
          - path: /channel
            pathType: Prefix
            backend:
              service:
                name: channel-service
                port:
                  number: 80
          - path: /member
            pathType: Prefix
            backend:
              service:
                name: member-service
                port:
                  number: 80
          - path: /oauth
            pathType: Prefix
            backend:
              service:
                name: member-service
                port:
                  number: 80
          - path: /schedule
            pathType: Prefix
            backend:
              service:
                name: schedule-service
                port:
                  number: 80
          - path: /board
            pathType: Prefix
            backend:
              service:
                name: board-service
                port:
                  number: 80
          - path: /reply
            pathType: Prefix
            backend:
              service:
                name: reply-service
                port:
                  number: 80
          - path: /memo
            pathType: Prefix
            backend:
              service:
                name: memo-service
                port:
                  number: 80
          - path: /when-to-meet
            pathType: Prefix
            backend:
              service:
                name: whentomeet-service
                port:
                  number: 80
          - path: /timetable
            pathType: Prefix
            backend:
              service:
                name: whentomeet-service
                port:
                  number: 80
          - path: /member-api
            pathType: Prefix
            backend:
              service:
                name: member-service
                port:
                  number: 80
          - path: /channel-api
            pathType: Prefix
            backend:
              service:
                name: channel-service
                port:
                  number: 80
          - path: /schedule-api
            pathType: Prefix
            backend:
              service:
                name: schedule-service
                port:
                  number: 80
          - path: /board-api
            pathType: Prefix
            backend:
              service:
                name: board-service
                port:
                  number: 80
          - path: /reply-api
            pathType: Prefix
            backend:
              service:
                name: reply-service
                port:
                  number: 80
          - path: /memo-api
            pathType: Prefix
            backend:
              service:
                name: memo-service
                port:
                  number: 80
          - path: /when-to-meet-api
            pathType: Prefix
            backend:
              service:
                name: whentomeet-service
                port:
                  number: 80
